--- a/ansible/playbooks/templates/etc/nginx/nginx.conf.j2
+++ b/ansible/playbooks/templates/etc/nginx/nginx.conf.j2
@@ -1,5 +1,5 @@
 # MANAGED BY ANSIBLE
-# Hostname: {{ inventory_host }}
+# Hostname: {{ ansible_fqdn }}
 user nginx;
 worker_processes auto;
 error_log /var/log/nginx/error.log;
